<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

  <parent>
    <artifactId>spring-boot-starter-parent</artifactId>
    <groupId>org.springframework.boot</groupId>
    <relativePath/>
    <version>2.3.3.RELEASE</version> <!-- lookup parent from repository -->
  </parent>

  <groupId>org.molgenis</groupId>
  <artifactId>vip-inheritance-matcher</artifactId>
  <version>1.0.0</version>

  <name>vip-inheritance-matcher</name>
  <description>Annotates VCF samples with mendelian violation and possible compound flags and
    matching inheritance modes
  </description>

  <scm>
    <connection>scm:git:git://github.com/molgenis/vip-inheritance-matcher.git</connection>
    <developerConnection>scm:git:ssh://git@github.com/molgenis/vip-inheritance-matcher.git
    </developerConnection>
    <url>https://github.com/molgenis/vip-inheritance-matcher</url>
  </scm>

  <licenses>
    <license>
      <distribution>repo</distribution>
      <name>The GNU Lesser General Public License, Version 3.0</name>
      <url>http://www.gnu.org/licenses/lgpl-3.0.txt</url>
    </license>
  </licenses>

  <modelVersion>4.0.0</modelVersion>

  <issueManagement>
    <system>GitHub</system>
    <url>https://github.com/molgenis/vip-inheritance-matcher/issues</url>
  </issueManagement>

  <properties>
    <commons.cli.version>1.4</commons.cli.version>
    <jacoco-maven-plugin.version>0.8.5</jacoco-maven-plugin.version>
    <java.version>11</java.version>
    <samtools.htsjdk.version>2.21.3</samtools.htsjdk.version>
  </properties>

  <profiles>
    <profile>
      <build>
        <plugins>
          <plugin>
            <artifactId>jacoco-maven-plugin</artifactId>
            <executions>
              <execution>
                <goals>
                  <goal>prepare-agent</goal>
                </goals>
                <id>prepare-agent</id>
              </execution>
              <execution>
                <goals>
                  <goal>report</goal>
                </goals>
                <id>report</id>
              </execution>
            </executions>
            <groupId>org.jacoco</groupId>
            <version>${jacoco-maven-plugin.version}</version>
          </plugin>
        </plugins>
      </build>
      <id>coverage</id>
    </profile>
  </profiles>

  <build>
    <finalName>vcf-inheritance-matcher</finalName>

    <plugins>
      <plugin>
        <artifactId>build-helper-maven-plugin</artifactId>
        <executions>
          <execution>
            <configuration>
              <resources>
                <resource>
                  <directory>target/generated-resources</directory>
                </resource>
              </resources>
            </configuration>
            <goals>
              <goal>add-resource</goal>
            </goals>
            <phase>generate-resources</phase>
          </execution>
        </executions>
        <groupId>org.codehaus.mojo</groupId>
      </plugin>
      <plugin>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <groupId>org.springframework.boot</groupId>
      </plugin>
      <plugin>
        <artifactId>maven-failsafe-plugin</artifactId>
        <groupId>org.apache.maven.plugins</groupId>
      </plugin>
    </plugins>
  </build>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <artifactId>commons-cli</artifactId>
        <groupId>commons-cli</groupId>
        <version>${commons.cli.version}</version>
      </dependency>
      <dependency>
        <artifactId>htsjdk</artifactId>
        <groupId>com.github.samtools</groupId>
        <version>${samtools.htsjdk.version}</version>
      </dependency>
      <dependency>
        <artifactId>junit-jupiter-engine</artifactId>
        <groupId>org.junit.jupiter</groupId>
        <version>${junit-jupiter.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <artifactId>spring-boot-starter</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>lombok</artifactId>
      <groupId>org.projectlombok</groupId>
      <optional>true</optional>
    </dependency>
    <dependency>
      <artifactId>commons-cli</artifactId>
      <groupId>commons-cli</groupId>
    </dependency>
    <dependency>
      <artifactId>htsjdk</artifactId>
      <groupId>com.github.samtools</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-test</artifactId>
      <exclusions>
        <exclusion>
          <artifactId>junit-vintage-engine</artifactId>
          <groupId>org.junit.vintage</groupId>
        </exclusion>
      </exclusions>
      <groupId>org.springframework.boot</groupId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <artifactId>junit-jupiter-engine</artifactId>
      <groupId>org.junit.jupiter</groupId>
      <scope>test</scope>
    </dependency>
  </dependencies>
</project>
